<?xml version="1.0"?>
<package>
  <name>youbot_pick_n_place</name>
  <version>1.0.0</version>
  <description> Simplified pick and place apps for youbot. Derived from youbot_move_group_tests package </description>

  <maintainer email="nichepah@gmail.com">Aneesh PA</maintainer>
  <license>MIT</license>

  <author email="nichepah@gmail.com">Aneesh PA</author> -->


  <build_depend>trajectory_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>trajecotry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
